Configuration changes and added Move Plugin
- Removed context highlights in Neogit
- Added unicorn emote to prompt in starship (makes me happy)
- Fixed some errors due to my naming scheme which was causing lua to be
  upset during sourcing.
- Added an autocmd for escaping my snippets if I ever change modes so
  that tab won't take me somewhere random on the buffer (where I last
  abandoned a multiple choice snippet).

--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -22,7 +22,7 @@ utc_time_offset = "-0"
 [username]
 style_user = "white bold"
 style_root = "black bold"
-format = "[$user]($style)"
+format = "🦄 [$user]($style)"
 disabled = false
 show_always = true
 
