--- a/nvim/.luarc.json
+++ b/nvim/.luarc.json
@@ -77,6 +77,7 @@
         "/Users/andy/.local/share/nvim/lazy/cmp-fish/lua",
         "/Users/andy/.local/share/nvim/lazy/neogit/lua",
         "/Users/andy/.local/share/nvim/lazy/mason-lspconfig.nvim/lua",
-        "${3rd}/luv/library"
+        "${3rd}/luv/library",
+        "/Users/andy/.local/share/nvim/mason/packages/lua-language-server/libexec/meta/66da0e3c"
     ]
 }
