--- a/code/settings.json
+++ b/code/settings.json
@@ -574,7 +574,7 @@
   "terminal.explorerKind": "external",
   "terminal.external.osxExec": "WezTerm.app",
   "terminal.integrated.commandsToSkipShell": ["vspacecode.space"],
-  "terminal.integrated.defaultProfile.osx": "zsh",
+  "terminal.integrated.defaultProfile.osx": "fish",
   "terminal.integrated.fontFamily": "JetBrains Mono, FiraCode Nerd Font Mono",
   "terminal.integrated.fontSize": 14,
   "terminal.integrated.inheritEnv": false,
