Changing some keybindings to fit nicer in my head
- Neovim and VSCode keybinds

--- a/code/settings.json
+++ b/code/settings.json
@@ -648,6 +648,11 @@
   ],
   "vim.normalModeKeyBindingsNonRecursive": [
     {
+      "after": [","],
+      "before": ["w"],
+      "commands": ["workbench.action.files.save"]
+    },
+    {
       "before": ["g", "k"],
       "commands": ["editor.action.showHover"]
     },
@@ -964,231 +969,10 @@
       "position": -1
     },
     {
-      "keys": "w",
-      "name": "Write file",
-      "type": "command",
-      "command": "workbench.action.files.save"
-    },
-    {
       "keys": "q",
       "name": "Quit",
       "type": "command",
       "command": "workbench.action.closeActiveEditor"
-    },
-    {
-      "keys": "C-w",
-      "name": "+Window",
-      "icon": "split-horizontal",
-      "type": "bindings",
-      "bindings": [
-        {
-          "key": "-",
-          "name": "Split window below",
-          "icon": "split-vertical",
-          "type": "command",
-          "command": "workbench.action.splitEditorDown"
-        },
-        {
-          "key": "/",
-          "name": "Split window right",
-          "icon": "split-horizontal",
-          "type": "command",
-          "command": "workbench.action.splitEditor"
-        },
-        {
-          "key": "=",
-          "name": "Reset window sizes",
-          "icon": "move",
-          "type": "command",
-          "command": "workbench.action.evenEditorWidths"
-        },
-        {
-          "key": "[",
-          "name": "Shrink window",
-          "icon": "remove",
-          "type": "transient",
-          "command": "workbench.action.decreaseViewSize",
-          "bindings": [
-            {
-              "key": "[",
-              "name": "Shrink window",
-              "icon": "remove",
-              "type": "command",
-              "command": "workbench.action.decreaseViewSize"
-            },
-            {
-              "key": "]",
-              "name": "Enlarge window",
-              "icon": "add",
-              "type": "command",
-              "command": "workbench.action.increaseViewSize"
-            }
-          ]
-        },
-        {
-          "key": "]",
-          "name": "Enlarge window",
-          "icon": "add",
-          "type": "transient",
-          "command": "workbench.action.increaseViewSize",
-          "bindings": [
-            {
-              "key": "[",
-              "name": "Shrink window",
-              "icon": "remove",
-              "type": "command",
-              "command": "workbench.action.decreaseViewSize"
-            },
-            {
-              "key": "]",
-              "name": "Enlarge window",
-              "icon": "add",
-              "type": "command",
-              "command": "workbench.action.increaseViewSize"
-            }
-          ]
-        },
-        {
-          "key": "d",
-          "name": "Close window",
-          "icon": "close",
-          "type": "command",
-          "command": "workbench.action.closeEditorsInGroup"
-        },
-        {
-          "key": "h",
-          "name": "Focus window left",
-          "icon": "arrow-left",
-          "type": "command",
-          "command": "workbench.action.focusPreviousGroup"
-        },
-        {
-          "key": "j",
-          "name": "Focus window down",
-          "icon": "arrow-down",
-          "type": "command",
-          "command": "workbench.action.focusBelowGroup"
-        },
-        {
-          "key": "k",
-          "name": "Focus window up",
-          "icon": "arrow-up",
-          "type": "command",
-          "command": "workbench.action.focusAboveGroup"
-        },
-        {
-          "key": "l",
-          "name": "Focus window right",
-          "icon": "arrow-right",
-          "type": "command",
-          "command": "workbench.action.focusNextGroup"
-        },
-        {
-          "key": "m",
-          "name": "Maximize window",
-          "icon": "chrome-maximize",
-          "type": "command",
-          "command": "workbench.action.toggleEditorWidths"
-        },
-        {
-          "key": "o",
-          "name": "Switch frame",
-          "icon": "multiple-windows",
-          "type": "command",
-          "command": "workbench.action.quickSwitchWindow"
-        },
-        {
-          "key": "s",
-          "name": "Split window below",
-          "icon": "split-vertical",
-          "type": "command",
-          "command": "workbench.action.splitEditorDown"
-        },
-        {
-          "key": "v",
-          "name": "Split window right",
-          "icon": "split-horizontal",
-          "type": "command",
-          "command": "workbench.action.splitEditor"
-        },
-        {
-          "key": "w",
-          "name": "Focus next window",
-          "icon": "arrow-small-down",
-          "type": "command",
-          "command": "workbench.action.focusNextGroup"
-        },
-        {
-          "key": "x",
-          "name": "Close all windows",
-          "icon": "close-all",
-          "type": "command",
-          "command": "workbench.action.closeAllGroups"
-        },
-        {
-          "key": "z",
-          "name": "Combine all buffers",
-          "icon": "combine",
-          "type": "command",
-          "command": "workbench.action.joinAllGroups"
-        },
-        {
-          "key": "D",
-          "name": "Close all other windows",
-          "icon": "close-all",
-          "type": "command",
-          "command": "workbench.action.closeEditorsInOtherGroups"
-        },
-        {
-          "key": "F",
-          "name": "Open new empty frame",
-          "icon": "empty-window",
-          "type": "command",
-          "command": "workbench.action.newWindow"
-        },
-        {
-          "key": "H",
-          "name": "Move window left",
-          "icon": "triangle-left",
-          "type": "command",
-          "command": "workbench.action.moveActiveEditorGroupLeft"
-        },
-        {
-          "key": "J",
-          "name": "Move window down",
-          "icon": "triangle-down",
-          "type": "command",
-          "command": "workbench.action.moveActiveEditorGroupDown"
-        },
-        {
-          "key": "K",
-          "name": "Move window up",
-          "icon": "triangle-up",
-          "type": "command",
-          "command": "workbench.action.moveActiveEditorGroupUp"
-        },
-        {
-          "key": "L",
-          "name": "Move window right",
-          "icon": "triangle-right",
-          "type": "command",
-          "command": "workbench.action.moveActiveEditorGroupRight"
-        },
-        {
-          "key": "M",
-          "name": "Maximize window and hide side bar",
-          "icon": "screen-full",
-          "type": "command",
-          "command": "workbench.action.maximizeEditor"
-        },
-        {
-          "key": "W",
-          "name": "Focus previous window",
-          "icon": "arrow-small-up",
-          "type": "command",
-          "command": "workbench.action.focusPreviousGroup"
-        }
-      ]
     },
     {
       "command": "workbench.action.terminal.new",
