--- a/code/settings.json
+++ b/code/settings.json
@@ -156,14 +156,14 @@
   "editor.dragAndDrop": true,
   "editor.find.cursorMoveOnType": false,
   "editor.foldingImportsByDefault": false,
-  "editor.fontFamily": "JetBrains Mono",
+  "editor.fontFamily": "Berkley Mono",
   "editor.fontSize": 16,
   "editor.fontLigatures": true,
   "editor.formatOnSaveMode": "modificationsIfAvailable",
   "editor.guides.bracketPairs": "active",
   "editor.inlayHints.enabled": "offUnlessPressed",
   "editor.lineHeight": 21,
-  "editor.lineNumbers": "on",
+  "editor.lineNumbers": "relative",
   "editor.linkedEditing": true,
   "editor.matchBrackets": "never",
   "editor.minimap.enabled": false,
@@ -198,31 +198,10 @@
   "evenBetterToml.formatter.alignComments": false,
   "evenBetterToml.formatter.alignEntries": true,
   "evenBetterToml.formatter.arrayTrailingComma": true,
-  "explicitFolding.rules": {
-    "*": {
-      "separator": "{{{"
-    },
-    "javascriptreact": [
-      {
-        "begin": "{/*",
-        "end": "*/}"
-      },
-      {
-        "begin": "<",
-        "end": "/>"
-      }
-    ],
-    "python": [
-      {
-        "begin": "(",
-        "end": ")"
-      }
-    ]
-  },
   "explorer.autoReveal": "focusNoScroll",
   "explorer.confirmDelete": false,
   "explorer.confirmDragAndDrop": false,
-  "explorer.openEditors.visible": 0,
+  "explorer.openEditors.visible": 1,
   "extensions.autoUpdate": false,
   "extensions.experimental.affinity": {
     "vscodevim.vim": 1
@@ -249,7 +228,6 @@
   "files.autoSave": "onWindowChange",
   "files.defaultLanguage": "txt",
   "files.trimFinalNewlines": true,
-  "files.trimTrailingWhitespace": true,
   "files.exclude": {
     "**/*.zwc*": true,
     "**/.classpath": true,
@@ -558,7 +536,7 @@
   "terminal.external.osxExec": "WezTerm.app",
   "terminal.integrated.commandsToSkipShell": ["vspacecode.space"],
   "terminal.integrated.defaultProfile.osx": "fish",
-  "terminal.integrated.fontFamily": "JetBrains Mono, FiraCode Nerd Font Mono",
+  "terminal.integrated.fontFamily": "Berkley Mono, FiraCode Nerd Font Mono",
   "terminal.integrated.fontSize": 14,
   "terminal.integrated.inheritEnv": false,
   "terminal.integrated.letterSpacing": 1,
@@ -599,355 +577,6 @@
   },
   "typescript.suggest.completeFunctionCalls": true,
   "typescript.suggest.paths": false,
-  "vim.camelCaseMotion.enable": true,
-  "vim.cursorStylePerMode.insert": "line",
-  "vim.cursorStylePerMode.normal": "block",
-  "vim.cursorStylePerMode.replace": "block-outline",
-  "vim.cursorStylePerMode.visual": "block-outline",
-  "vim.cursorStylePerMode.visualblock": "block-outline",
-  "vim.cursorStylePerMode.visualline": "block-outline",
-  "vim.debug.loggingLevelForConsole": "debug",
-  "vim.easymotion": true,
-  "vim.easymotionMarkerFontWeight": "bold",
-  "vim.easymotionMarkerForegroundColorOneChar": "#f78ae0",
-  "vim.highlightedyank.color": "rgba(247, 138, 224, 0.40)",
-  "vim.highlightedyank.enable": true,
-  "vim.history": 100,
-  "vim.hlsearch": true,
-  "vim.highlightedyank.duration": 500,
-  "vim.insertModeKeyBindings": [
-    {
-      "before": ["j", "k"],
-      "after": ["<Esc>"]
-    },
-    {
-      "before": ["<C-j>"],
-      "commands": ["cursorDown"]
-    },
-    {
-      "before": ["<C-k>"],
-      "commands": ["cursorUp"]
-    },
-    {
-      "before": ["<BS>"],
-      "commands": ["deleteLeft"]
-    },
-    {
-      "after": ["cmd+z"],
-      "before": ["cmd+a"]
-    },
-    {
-      "after": ["<Esc>"],
-      "before": ["ctrl+d"]
-    }
-  ],
-  "vim.normalModeKeyBindingsNonRecursive": [
-    {
-      "before": ["g", "k"],
-      "commands": ["editor.action.showHover"]
-    },
-    {
-      "after": ["<space>"],
-      "before": [";"],
-      "commands": ["editor.action.commentLine"]
-    },
-    {
-      "before": ["Z", "Z"],
-      "commands": [":wq"]
-    },
-    {
-      "after": ["<ESC>"],
-      "before": ["<ESC>"],
-      "commands": [":nohl", "closeFindWidget"]
-    },
-    {
-      "after": ["g", "j"],
-      "before": ["j"]
-    },
-    {
-      "after": ["g", "k"],
-      "before": ["k"]
-    },
-    {
-      "before": ["g", "H"],
-      "commands": ["docsView.documentation.focus"]
-    },
-    {
-      "before": ["g", "p"],
-      "commands": ["editor.action.peekDefinition"]
-    },
-    {
-      "after": ["s"],
-      "before": ["f"]
-    },
-    {
-      "after": ["S"],
-      "before": ["F"]
-    },
-    {
-      "before": ["g", "h"],
-      "commands": ["editor.action.showDefinitionPreviewHover"]
-    },
-    {
-      "before": ["g", "r"],
-      "commands": ["editor.action.referenceSearch.trigger"]
-    },
-    {
-      "after": ["q"],
-      "before": ["Q"]
-    },
-    {
-      "before": ["q"],
-      "commands": ["workbench.action.closeActiveEditor"]
-    },
-    {
-      "after": ["<C-d>", "z", "z"],
-      "before": ["<C-d>"]
-    },
-    {
-      "after": ["<C-u>", "z", "z"],
-      "before": ["<C-u>"]
-    },
-    {
-      "before": [">"],
-      "commands": ["editor.action.indentLines"]
-    },
-    {
-      "before": ["<"],
-      "commands": ["editor.action.outdentLines"]
-    },
-    {
-      "after": ["\"", "_", "c"],
-      "before": ["c"]
-    },
-    {
-      "after": ["\"", "_", "C"],
-      "before": ["C"]
-    },
-    {
-      "after": ["\"", "_", "c", "c"],
-      "before": ["c", "c"]
-    },
-    {
-      "after": ["\"", "_", "x"],
-      "before": ["x"]
-    },
-    {
-      "after": ["\"", "_", "X"],
-      "before": ["X"]
-    },
-    {
-      "after": ["d"],
-      "before": ["m"]
-    },
-    {
-      "after": ["d", "d"],
-      "before": ["m", "m"]
-    },
-    {
-      "after": ["D"],
-      "before": ["M"]
-    },
-    {
-      "after": ["g", "b"],
-      "before": ["<C-n>"]
-    },
-    {
-      "before": ["<C-j>"],
-      "commands": ["editor.action.insertCursorBelow"]
-    },
-    {
-      "before": ["<C-k>"],
-      "commands": ["editor.action.insertCursorAbove"]
-    },
-    {
-      "before": ["J"],
-      "commands": ["editor.action.moveLinesDownAction"]
-    },
-    {
-      "before": ["K"],
-      "commands": ["editor.action.moveLinesUpAction"]
-    },
-    {
-      "before": ["g", "l"],
-      "commands": ["workbench.action.gotoLine"]
-    },
-    {
-      "before": ["g", "K"],
-      "commands": ["extension.dash.specific"]
-    },
-    {
-      "before": ["g", "D"],
-      "commands": ["editor.action.revealDefinitionAside"]
-    },
-    {
-      "before": ["<space>"],
-      "commands": ["vspacecode.space"]
-    },
-    {
-      "after": ["g", "_"],
-      "before": ["L"]
-    },
-    {
-      "after": ["^"],
-      "before": ["H"]
-    },
-    {
-      "after": [],
-      "before": ["g", "B"],
-      "commands": [
-        {
-          "command": "editor.action.selectHighlights"
-        }
-      ]
-    },
-    {
-      "after": [],
-      "before": ["g", "H"],
-      "commands": [
-        {
-          "command": "editor.action.triggerParameterHints"
-        }
-      ]
-    },
-    {
-      "before": ["u"],
-      "commands": [
-        {
-          "command": "undo"
-        }
-      ]
-    },
-    {
-      "before": ["<C-r>"],
-      "commands": [
-        {
-          "command": "redo"
-        }
-      ]
-    },
-    {
-      "after": ["v"],
-      "before": ["v"]
-    },
-    {
-      "after": ["g", "k"],
-      "before": ["<up>"]
-    },
-    {
-      "after": ["g", "j"],
-      "before": ["<down>"]
-    },
-    {
-      "after": ["y", "$"],
-      "before": ["Y"]
-    },
-    {
-      "before": [","],
-      "commands": [
-        "vspacecode.space",
-        {
-          "args": "m",
-          "command": "whichkey.triggerKey"
-        }
-      ]
-    }
-  ],
-  "vim.searchHighlightColor": "#85e89d",
-  "vim.searchHighlightTextColor": "#24292e",
-  "vim.smartcase": true,
-  "vim.sneak": true,
-  "vim.surround": true,
-  "vim.sneakReplacesF": true,
-  "vim.useSystemClipboard": true,
-  "vim.visualModeKeyBindingsNonRecursive": [
-    {
-      "after": ["g", "j"],
-      "before": ["j"]
-    },
-    {
-      "after": ["g", "k"],
-      "before": ["k"]
-    },
-    {
-      "after": ["s"],
-      "before": ["f"]
-    },
-    {
-      "after": ["S"],
-      "before": ["F"]
-    },
-    {
-      "before": ["<Tab>"],
-      "commands": ["editor.action.indentLines"]
-    },
-    {
-      "after": ["y", "g", "v", "<ESC>"],
-      "before": ["y"]
-    },
-    {
-      "after": ["g", "b"],
-      "before": ["<C-n>"]
-    },
-    {
-      "after": ["\"", "_", "x"],
-      "before": ["x"]
-    },
-    {
-      "after": ["d"],
-      "before": ["m"]
-    },
-    {
-      "before": ["K"],
-      "commands": ["editor.action.moveLinesUpAction"]
-    },
-    {
-      "before": ["J"],
-      "commands": ["editor.action.moveLinesDownAction"]
-    },
-    {
-      "before": ["<space>"],
-      "commands": ["vspacecode.space"]
-    },
-    {
-      "before": ["g", "B"],
-      "commands": [
-        {
-          "command": "editor.action.selectHighlights"
-        }
-      ]
-    },
-    {
-      "after": ["^"],
-      "before": ["H"]
-    },
-    {
-      "after": ["g", "_"],
-      "before": ["L"]
-    },
-    {
-      "before": [">"],
-      "commands": ["editor.action.indentLines"]
-    },
-    {
-      "before": ["<"],
-      "commands": ["editor.action.outdentLines"]
-    },
-    {
-      "after": ["a", "f"],
-      "before": ["v"]
-    },
-    {
-      "before": [","],
-      "commands": [
-        "vspacecode.space",
-        {
-          "args": "m",
-          "command": "whichkey.triggerKey"
-        }
-      ]
-    }
-  ],
   "vscode-neovim.neovimExecutablePaths.darwin": "/opt/homebrew/bin/nvim",
   "vscode_custom_css.imports": [
     "file:///Users/andy/Config/code/vscode-dim-editors.js"
@@ -2178,7 +1807,7 @@
     // "editorCursor.foreground": "#6f0285",
     "titleBar.activeBackground": "#0b0d0f"
   },
-  "workbench.colorTheme": "Dracula Pro (Van Helsing)",
+  "workbench.colorTheme": "oxocarbon",
   "workbench.editor.labelFormat": "medium",
   "workbench.editor.openPositioning": "first",
   "workbench.editor.showTabs": true,
@@ -2229,5 +1858,6 @@
   "Lua.telemetry.enable": true,
   "editor.formatOnSave": true,
   "git.openRepositoryInParentFolders": "always",
-  "jupyter.interactiveWindow.textEditor.executeSelection": false
+  "jupyter.interactiveWindow.textEditor.executeSelection": false,
+  "trailing-spaces.trimOnSave": true
 }
