Minor updates to config
- Changed from Leap back to Flash
- Added Neotest configuration
- Updated neogit to _neogit
- Updated plugins

--- a/code/settings.json
+++ b/code/settings.json
@@ -125,7 +125,7 @@
     "editor.tabSize": 2
   },
   "breadcrumbs.enabled": true,
-  "breadcrumbs.filePath": true,
+  "breadcrumbs.filePath": "on",
   "code-runner.enableAppInsights": false,
   "code-runner.executorMap": {
     "javascript": "node -r esm",
@@ -1807,7 +1807,7 @@
     // "editorCursor.foreground": "#6f0285",
     "titleBar.activeBackground": "#0b0d0f"
   },
-  "workbench.colorTheme": "oxocarbon",
+  "workbench.colorTheme": "GitHub Dark",
   "workbench.editor.labelFormat": "medium",
   "workbench.editor.openPositioning": "first",
   "workbench.editor.showTabs": true,
