Updates to configurations and Plugins

--- a/code/settings.json
+++ b/code/settings.json
@@ -1833,7 +1833,7 @@
     // "editorCursor.foreground": "#6f0285",
     "titleBar.activeBackground": "#0b0d0f"
   },
-  "workbench.colorTheme": "GitHub Dark",
+  "workbench.colorTheme": "Kanagawa",
   "workbench.editor.labelFormat": "medium",
   "workbench.editor.openPositioning": "first",
   "workbench.editor.showTabs": "multiple",
